[package]
name = "serialimagedata"
version = "1.0.0"
edition = "2021"
rust-version = "1.68.0"
authors = ["Sunip K. Mukherjee"]
license = "MIT OR Apache-2.0"
keywords = ["image", "serialization", "deserialization"]
readme = "README.MD"
repository = "https://github.com/sunipkm/serialimagedata"
homepage = "https://crates.io/crates/serialimagedata"
description = """
Serialization for the [image](https://crates.io/crates/image) crate's DynamicImage type, with additional metadata.
"""
exclude = [".github"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
serde = { version = "1.0.188", features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1.0.107", features = ["raw_value"] }
