[package]
name = "serialimage" 
version = "2.0.0"
edition = "2021"
rust-version = "1.68.0"
authors = ["Sunip K. Mukherjee"]
license = "MIT OR Apache-2.0"
keywords = ["image", "serialization", "deserialization"]
readme = "README.MD"
repository = "https://github.com/sunipkm/serialimage"
homepage = "https://crates.io/crates/serialimage"
description = """
Serialization for the [image](https://crates.io/crates/image) crate's DynamicImage type, with additional metadata.
"""
exclude = [".github"]

[features]
default = []
##! Optional feature: FITS Output 

## The `fitsio` feature enables FITS output support for the [`DynamicSerialImage`] type, and requires the `fitsio` crate. 
fitsio = ["dep:fitsio"]

[dependencies]
image = "0.24.7"
serde = { version = "1.0.188", features = ["derive"] }
document-features = { version = "0.2" }
##! ### Optional dependencies 

### Enable this feature to implement the trait for the types from the `fitsio` crate 
fitsio = { version = "0.21.2", optional = true}
once_cell = "1.18.0"


[dev-dependencies]
serde_json = { version = "1.0.107", features = ["raw_value"] }
rand = "0.8.5"

[package.metadata.docs.rs]
features = ["document-features"]
