[package]
name = "serialimage" 
version = "4.1.1"
edition = "2021"
rust-version = "1.68.0"
authors = ["Sunip K. Mukherjee"]
license = "MIT OR Apache-2.0"
keywords = ["image", "serialization", "deserialization"]
readme = "README.MD"
repository = "https://github.com/sunipkm/serialimage"
homepage = "https://crates.io/crates/serialimage"
description = """
Serialization for the [image](https://crates.io/crates/image) crate's DynamicImage type, with additional metadata.
"""
exclude = [".github"]

[features]
#! ## Optional feature: FITS Output 

## The `fitsio` feature enables FITS output support for the [`DynamicSerialImage`] and [`SerialImageBuffer`] types, and requires the `fitsio` crate. 
fitsio = ["dep:fitsio"]

[dependencies]
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

#! ## Optional dependency: FITS Output

## The `fitsio` crate is required to enable the `fitsio` feature.
fitsio = { version = "0.21", optional = true }
once_cell = "1.18"

[build-dependencies]
rustc_version = "0.4"


[dev-dependencies]
serde_json = { version = "1.0", features = ["raw_value"] }
rand = "0.8"

[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
